<resources>
    <string name="app_name">Database 51</string>
    <string name="FName">FName</string>
    <string name="Lname">Lname</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Register">Register</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Emailex">Emailex</string>
</resources>
