<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/fnameedittxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/FName"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/fnametxtview"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill"
        tools:text="@string/FName"
        android:layout_marginLeft="49dp" />
    <EditText
        android:id="@+id/lnameedittxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/Lname"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/lnametxtview"
        app:layout_constraintTop_toBottomOf="@+id/fnameedittxt"
        tools:ignore="Autofill"
        tools:text="@string/Lname"
        android:layout_marginLeft="49dp" />
    <EditText
        android:id="@+id/emailedittxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/emailtxtview"
        app:layout_constraintTop_toBottomOf="@+id/passedittxt"
        tools:ignore="Autofill"
        tools:text="@string/Email"
        android:layout_marginLeft="76dp" />
    <EditText
        android:id="@+id/phoneedittxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill"
        android:ems="10"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:text="@string/Phone"
        app:layout_constraintStart_toEndOf="@+id/phonetxtview"
        app:layout_constraintTop_toBottomOf="@+id/emailedittxt"
        tools:text="@string/Phone"
        android:layout_marginLeft="72dp" />
    <Button
        android:id="@+id/regbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/Register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phonetxtview"
        tools:text="@string/Register"
        android:layout_marginLeft="16dp" />
    <TextView
        android:id="@+id/fnametxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/FName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/FName"
        android:layout_marginLeft="32dp" />
    <TextView
        android:id="@+id/lnametxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="61dp"
        android:text="@string/Lname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnametxtview"
        tools:text="@string/Lname"
        android:layout_marginLeft="34dp" />
    <TextView
        android:id="@+id/passtxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="74dp"
        android:text="@string/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnametxtview"
        tools:text="@string/Password"
        android:layout_marginLeft="34dp" />
    <TextView
        android:id="@+id/emailtxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtxtview"
        tools:text="@string/Email"
        android:layout_marginLeft="36dp" />
    <TextView
        android:id="@+id/phonetxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/Phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtxtview"
        tools:text="@string/Phone"
        android:layout_marginLeft="36dp" />
    <EditText
        android:id="@+id/passedittxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/passtxtview"
        app:layout_constraintTop_toBottomOf="@+id/lnameedittxt"
        tools:ignore="Autofill"
        tools:text="@string/Password"
        android:layout_marginLeft="56dp" />
    <Button
        android:id="@+id/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/regbtn"
        app:layout_constraintTop_toBottomOf="@+id/phoneedittxt"
        tools:text="@string/Login"
        android:layout_marginLeft="80dp" />
</android.support.constraint.ConstraintLayout>

    